--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     volumes:
       - ./frontend/src:/app/src
       - ./frontend/public:/app/public
-      - /app/node_modules
+      - ./frontend/node_modules:/app/node_modules
     environment:
       CHOKIDAR_USEPOLLING: "true"
     stdin_open: true
