--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
-    "styled-components": "^6.0.0"
+    "styled-components": "^6.0.0",
+    "react-icons": "^4.3.1"
+
   },
   "scripts": {
     "start": "react-scripts start",
