--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,15 +23,12 @@ services:
       - localnet
 
   nginx:
-    image: nginx:latest
+    image: nginx:alpine
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     environment:
       VIRTUAL_HOST: shutupgpt.janczechowski.com
       LETSENCRYPT_HOST: shutupgpt.janczechowski.com
-    depends_on:
-      - frontend
-      - backend
     networks:
       - localnet
       - nginx-proxy
