frontend refactor: vite, prod build, nginx safety headers + ansible

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,51 @@
+# Backend
 backend/__pycache__/*
 backend/openai_api_key
 backend/deepinfra_api_key
+backend/leaderboard.json
+
+# Leaderboard data (production)
+leaderboard.json
+
+# Swap files
 *.*.swp
+*.swp
+*~
+
+# Frontend - Node.js and build artifacts
+frontend/node_modules/
+frontend/.pnp
+frontend/.pnp.js
+frontend/coverage/
+frontend/build/
+frontend/dist/
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/.eslintcache
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.venv/
+venv/
+
+# IDE
+.vscode/
+.idea/
+.DS_Store
+
+# Logs
+*.log
+
+# Docker local volumes
+nginx/html/*
+!nginx/html/.gitkeep
+
+# Backups
+*.backup.*
