--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,72 @@
-version: '3.8'
 services:
   backend:
     build: ./backend
     volumes:
       - ./backend:/app
+    environment:
+      - PYTHONUNBUFFERED=1
     networks:
       - localnet
     command: uvicorn main:app --reload --workers 1 --host 0.0.0.0 --port 8000
+    restart: always
 
   frontend:
-    build: ./frontend
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
+      target: development
     volumes:
       - ./frontend/src:/app/src
       - ./frontend/public:/app/public
-      #- ./frontend/node_modules:/app/node_modules
+      - ./frontend/index.html:/app/index.html
+      - ./frontend/vite.config.js:/app/vite.config.js
+      - ./frontend/package.json:/app/package.json
+      - /app/node_modules
     environment:
-      CHOKIDAR_USEPOLLING: "true"
-    stdin_open: true
-    tty: true
-    command: npm start
+      - NODE_ENV=development
     networks:
       - localnet
+    restart: unless-stopped
 
   nginx:
     image: nginx:alpine
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf.template:/etc/nginx/templates/nginx.conf.template:ro
+      - ./nginx/html:/usr/share/nginx/html:ro
     environment:
-      VIRTUAL_HOST: shutupgpt.janczechowski.com
-      LETSENCRYPT_HOST: shutupgpt.janczechowski.com
+      DEV_MODE: "true"
+      NGINX_ENVSUBST_FILTER: DEV_MODE
+      NGINX_ENVSUBST_OUTPUT_DIR: /etc/nginx
+    networks:
+      - localnet
+    depends_on:
+      - backend
+      - frontend
+    ports:
+      - 127.0.0.1:8080:80
+    restart: unless-stopped
+
+  # Production: self-contained nginx with built frontend
+  site:
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
+      target: production
+    #ports: ["127.0.0.1:3080:80"]
     networks:
       - localnet
       - nginx-proxy
+    environment:
+      VIRTUAL_HOST: shutupgpt.janczechowski.com
+      LETSENCRYPT_HOST: shutupgpt.janczechowski.com
+      DEV_MODE: "false"
+      NGINX_ENVSUBST_FILTER: DEV_MODE
+      NGINX_ENVSUBST_OUTPUT_DIR: /etc/nginx
+    depends_on:
+      - backend
+    restart: always
+    profiles:
+      - production
 
 networks:
   localnet:
