--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -21,12 +21,18 @@ http {
     ''      close;
   }
 
-  # DEV_MODE controls CSP inline permissions for scripts
-  # Styles always allow unsafe-inline for styled-components
+  # DEV_MODE controls CSP inline permissions for scripts and styles
+  # In dev mode, Vite HMR injects inline styles and scripts
   map "${DEV_MODE}" $dev_script_policy {
     default "";
     "true"  " 'unsafe-inline' 'unsafe-eval'";
     "1"     " 'unsafe-inline' 'unsafe-eval'";
+  }
+
+  map "${DEV_MODE}" $dev_style_policy {
+    default "";
+    "true"  " 'unsafe-inline'";
+    "1"     " 'unsafe-inline'";
   }
 
   upstream backend {
@@ -47,7 +53,7 @@ http {
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
     add_header Cross-Origin-Opener-Policy "same-origin" always;
     add_header Cross-Origin-Resource-Policy "same-site" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self'${dev_script_policy}; style-src 'self'; font-src 'self' data:; img-src 'self' data: https:; connect-src 'self'; object-src 'none'; base-uri 'self'; frame-ancestors 'none';" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self'${dev_script_policy}; style-src 'self'${dev_style_policy}; font-src 'self' data:; img-src 'self' data: https:; connect-src 'self'; object-src 'none'; base-uri 'self'; frame-ancestors 'none';" always;
 
     # --- Block common scanner paths ---
     location ~* \.(php|asp|aspx|jsp|cgi|pl|sh|py|rb)$ { return 404; }
